Changed navbar color, Jumbotron color & fixed navbar dropdown collapse

--- a/app/assets/stylesheets/Bootstrapand customisation.css.scss
+++ b/app/assets/stylesheets/Bootstrapand customisation.css.scss
@@ -1,1 +1,7 @@
+$body-bg: #34495e; 
+$navbar-inverser-color: #7f8c8d;
+$navbar-inverse-link-color: white;
+$jumbotron-bg: black;
+$jumbotron-heading-color: white;
+$jumbortron-color: white;
 @import 'bootstrap';
